--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8">
   <title>Simple Polygon</title>
+  <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -17,7 +18,7 @@
   <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
     </script>
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=???&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHS78FEcF6JncTK-YDn4FqF4XQwHkg_zQ&callback=initMap">
     </script>
 </body>
 
